--- a/src/app/personal/personal.component.html
+++ b/src/app/personal/personal.component.html
@@ -79,39 +79,30 @@
                 <input type="text" placeholder="Nombre" class="form-control input-tex">
             </div>
             <div style="margin-top: 10px;">
-                <input type="text" placeholder="Apellidos" class="form-control input-tex">
-            </div>
-            <div style="margin-top: 10px;">
                 <input type="email" placeholder="Correo" class="form-control input-tex">
             </div>
             <div style="margin-top: 10px;">
                 <select class="form-control input-tex">
           <option disabled selected>Estado</option>
-          <option value="item 1">Item 1</option>
-          <option value="item 2">Item 2</option>
-          <option value="item 3">Item 3</option>
+          <option value="item 1">Activo</option>
+          <option value="item 2">Inactivo</option>
         </select>
             </div>
             <div style="margin-top: 10px;">
                 <select class="form-control input-tex">
           <option disabled selected>Cargo</option>
-          <option value="item 1">Item 1</option>
-          <option value="item 2">Item 2</option>
-          <option value="item 3">Item 3</option>
+          <option value="item 1">Funcionario</option>
+          <option value="item 2">Funcionario Planta</option>
+          <option value="item 3">Administrador</option>
+          <option value="item 3">Gerente</option>
         </select>
             </div>
             <div style="margin-top: 10px;">
                 <input type="password" placeholder="Contraseña" class="form-control input-tex">
             </div>
             <div style="margin-top: 10px;">
-                <select class="form-control input-tex">
-          <option disabled selected>Rol</option>
-          <option value="item 1">Item 1</option>
-          <option value="item 2">Item 2</option>
-          <option value="item 3">Item 3</option>
-        </select>
+                <input type="text" placeholder="Rol" class="form-control input-tex">
             </div>
-
         </div>
         <div class="row justify-content-center" style="margin-top: 10px;">
             <div class="col-6 ">
