--- a/src/app/informacion-perfil/informacion-perfil.component.html
+++ b/src/app/informacion-perfil/informacion-perfil.component.html
@@ -1,3 +1,102 @@
-<p>
-  informacion-perfil works!
-</p>
+<header class="header-sesion">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand">
+                <img src="../../assets/Logo.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">Green Report Web
+            </a>
+        </nav>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Personal
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" [routerLink]="['/InformacionPerfil']">Informacion Perfil</a>
+                        <a class="dropdown-item" [routerLink]="['/personal']">Personal</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Registro Recuperación
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" [routerLink]="['/Registro']">Registro</a>
+                        <a class="dropdown-item" [routerLink]="['/RegistroAuditoria']">Registro Auditoria</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Materiales
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" [routerLink]="['/Materiales']">Materiales</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Reportes
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" [routerLink]="['/ProcesoRecuperacion']">Proceso Recuperación</a>
+                        <a class="dropdown-item" [routerLink]="['/AuditoriaRecuperacion']">Auditoria Recuperación</a>
+                    </div>
+                </li>
+            </ul>
+            <div class="form-inline my-2 my-lg-0">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link">Usuario: Admin</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" [routerLink]="['']">Cerrar sesión</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+<div class="row justify-content-center" *ngIf="mostrarLista">
+    <div class="col-12 padre">
+        <div class="cuadro">
+            <label> Perfil</label>
+        </div>
+    </div>
+    <div class="col-12" style="margin-top: 10px;">
+        <table class="table table-striped">
+            <thead>
+                <tr style="text-align: center;">
+                    <th scope="col">#</th>
+                    <th scope="col" sortable="name">Nombre</th>
+                    <th scope="col" sortable="population">Correo</th>
+                    <th scope="col" sortable="population">Estado</th>
+                    <th scope="col" sortable="population">Cargo</th>
+                    <th scope="col" sortable="population">Rol</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>1</th>
+                    <td>
+                        Cristian Camilo
+                    </td>
+                    <td>
+                        ccbr_31@hotmail.com
+                    </td>
+                    <td>
+                        Activo
+                    </td>
+                    <td>
+                        Desarrollador Full Stack (Angular/NodeJs)
+                    </td>
+                    <td>
+                        Estudiante
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
