--- a/src/app/personal/personal.component.html
+++ b/src/app/personal/personal.component.html
@@ -1,8 +1,8 @@
 <header class="header-sesion">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand">
                 <img src="../../assets/Logo.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">Green Report Web
@@ -12,37 +12,37 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Personal
-          </a>
+                        Personal
+                    </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item">Informacion Perfil</a>
-                        <a class="dropdown-item">Personal</a>
+                        <a class="dropdown-item" [routerLink]="['/InformacionPerfil']">Informacion Perfil</a>
+                        <a class="dropdown-item" [routerLink]="['/personal']">Personal</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Registro Recuperación
-          </a>
+                        Registro Recuperación
+                    </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item">Registro</a>
-                        <a class="dropdown-item">Registro Auditoria</a>
+                        <a class="dropdown-item" [routerLink]="['/Registro']">Registro</a>
+                        <a class="dropdown-item" [routerLink]="['/RegistroAuditoria']">Registro Auditoria</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Materiales
-          </a>
+                        Materiales
+                    </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item">Materiales</a>
+                        <a class="dropdown-item" [routerLink]="['/Materiales']">Materiales</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Reportes
-          </a>
+                        Reportes
+                    </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item">Proceso Recuperación</a>
-                        <a class="dropdown-item">Auditoria Recuperación</a>
+                        <a class="dropdown-item" [routerLink]="['/ProcesoRecuperacion']">Proceso Recuperación</a>
+                        <a class="dropdown-item" [routerLink]="['/AuditoriaRecuperacion']">Auditoria Recuperación</a>
                     </div>
                 </li>
             </ul>
@@ -52,7 +52,7 @@
                         <a class="nav-link">Usuario: Admin</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link">Cerrar sesión</a>
+                        <a class="nav-link" [routerLink]="['']">Cerrar sesión</a>
                     </li>
                 </ul>
             </div>
