--- a/src/app/personal/personal.component.css
+++ b/src/app/personal/personal.component.css
@@ -1,11 +1,12 @@
-.botones{
+.botones {
     color: rgb(255, 255, 255);
     background-color: #323433;
     text-align: center;
     height: 50px;
     padding: 0px;
 }
-.cuadro{
+
+.cuadro {
     margin-top: 10px;
     border-radius: 10px;
     background-color: #33b5e6;
@@ -15,8 +16,14 @@
     width: 100%;
     text-align: center;
 }
+
 @media (max-width: 600px) {
     .cuadro {
-    font-size: medium;
+        font-size: medium;
     }
-  }
+}
+
+.valid,
+.required {
+    color: red !important;
+}
