--- a/src/app/personal/personal.component.html
+++ b/src/app/personal/personal.component.html
@@ -78,15 +78,9 @@
             </div>
             <div class="col-12" style="margin-top: 10px;">
                 <div>
-                    <input type="number" placeholder="id" formControlName="idPersonal" class="form-control input-tex" [ngClass]="{'valid': f.idPersonal.value}">
-                    <div *ngIf="f.idPersonal.errors && f.idPersonal.touched">
-                        <small *ngIf="f.idPersonal.errors?.required" class="required">Id del personal es requerido</small>
-                    </div>
-                </div>
-                <div>
                     <input type="text" placeholder="Nombre" formControlName="nombre" class="form-control input-tex">
                     <div *ngIf="f.nombre.errors && f.nombre.touched">
-                        <small *ngIf="f.nombre.errors?.required" class="required">Id del personal es requerido</small>
+                        <small class="alert alert-danger mt-4" role="alert">Nombre es un campo obligatorio</small>
                     </div>
                 </div>
                 <div style="margin-top: 10px;">
@@ -112,7 +106,14 @@
                     <input type="password" placeholder="Contraseña" class="form-control input-tex" formControlName="idContraseña">
                 </div>
                 <div style="margin-top: 10px;">
-                    <input type="text" placeholder="Rol" class="form-control input-tex" formControlName="Descripcion">
+                    <select class="form-control input-tex" formControlName="Descripcion">
+                        <option disabled selected>Rol</option>
+                        <option value="Bachiller">Bachiller</option>
+                        <option value="Analista">Analista</option>
+                        <option value="Profesional">Profesional</option>
+                        <option value="Estudiante">Estudiante</option>
+                        <option value="Universitario">Universitario</option>
+                    </select>
                 </div>
             </div>
             <div class="row justify-content-center" style="margin-top: 10px;">
