--- a/src/app/personal/personal.component.html
+++ b/src/app/personal/personal.component.html
@@ -88,14 +88,14 @@
                 </div>
                 <div style="margin-top: 10px;">
                     <select class="form-control input-tex" formControlName="estado">
-                        <option disabled selected >Estado</option>
+                        <option disabled selected value= "" >Seleccionar Estado</option>
                         <option value="Activo">Activo</option>
                         <option value="Inactivo">Inactivo</option>
                     </select>
                 </div>
                 <div style="margin-top: 10px;">
                     <select class="form-control input-tex" formControlName="idCargo">
-                        <option disabled selected>Cargo</option>
+                        <option disabled selected value= "" >Seleccionar Cargo</option>
                         <option value="1">Funcionario</option>
                         <option value="2">Funcionario Planta</option>
                         <option value="3">Administrador</option>
@@ -107,7 +107,7 @@
                 </div>
                 <div style="margin-top: 10px;">
                     <select class="form-control input-tex" formControlName="Descripcion">
-                        <option disabled selected>Rol</option>
+                        <option disabled selected value= "" >Seleccionar Rol</option>
                         <option value="Bachiller">Bachiller</option>
                         <option value="Analista">Analista</option>
                         <option value="Profesional">Profesional</option>
