--- a/src/app/materiales/materiales.component.html
+++ b/src/app/materiales/materiales.component.html
@@ -49,7 +49,7 @@
             <div class="form-inline my-2 my-lg-0">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" [routerLink]="['/InformacionPerfil']">Usuario: Admin</a>
+                        <a class="nav-link" [routerLink]="['/InformacionPerfil']">Usuario: {{ user?.correo }}</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" [routerLink]="['']">Cerrar sesión</a>
@@ -59,6 +59,34 @@
         </div>
     </nav>
 </header>
-<p>
-    materiales works!
-</p>
+<div style="margin:50px; ">
+    <div class="row justify-content-center" *ngIf="mostrarLista">
+        <div class="col-12 padre">
+            <div class="cuadro">
+                <label class="badge badge-dark">Materiales</label>
+            </div>
+        </div>
+        <div class="col-12" style="margin-top: 10px;">
+            <table class="table table-striped">
+                <thead>
+                    <tr style="text-align: center;">
+                        <th scope="col">#</th>
+                        <th scope="col" sortable="name">Material</th>
+                        <th scope="col" sortable="population">Descripcion</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let material of material; let i = index" style="text-align: center;">
+                        <th style="text-align: center;">{{ i +1 }}</th>
+                        <td style="text-align: center;">
+                            {{ material?.nombre }}
+                        </td>
+                        <td style="text-align: center;">
+                            {{ material?.Descripcion }}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
