--- a/src/app/personal/personal.component.html
+++ b/src/app/personal/personal.component.html
@@ -147,20 +147,20 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let persona of personas; let i = index">
-                        <th>{{ i +1 }}</th>
-                        <td>
+                        <th style="text-align: center;">{{ i +1 }}</th>
+                        <td style="text-align: center;">
                             {{ persona?.nombre }}
                         </td>
-                        <td>
+                        <td style="text-align: center;">
                             {{ persona?.Correo }}
                         </td>
-                        <td>
+                        <td style="text-align: center;">
                             {{ persona?.estado }}
                         </td>
-                        <td>
+                        <td style="text-align: center;">
                             {{ persona?.Cargo }}
                         </td>
-                        <td>
+                        <td style="text-align: center;">
                             {{ persona?.Descripcion }}
                         </td>
                     </tr>
