--- a/src/app/registro-auditoria/registro-auditoria.component.html
+++ b/src/app/registro-auditoria/registro-auditoria.component.html
@@ -49,7 +49,7 @@
             <div class="form-inline my-2 my-lg-0">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" [routerLink]="['/InformacionPerfil']">Usuario: Admin</a>
+                        <a class="nav-link" [routerLink]="['/InformacionPerfil']">Usuario: {{ user?.correo }}</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" [routerLink]="['']">Cerrar sesión</a>
